tempfile/derive_more/tests/compile_fail/debug/wrong_formatting_argument.rs
#[derive(derive_more::Debug)]
pub struct Foo {
    #[debug("Stuff({bar:M})")]
    bar: String,
}

fn main() {}
